# faucet

./: .env.example  .gitignore  Cargo.toml
src/: client.rs  config.rs  main.rs  wallet.rs
