[package]
name = "faucet-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
axum-governor = "1"
lazy-limit = "1"
tower = "0.5"
real = { version = "0.1", features = ["axum"] }
apalis = { version = "1.0.0-beta.2" }
apalis-sqlite = "1.0.0-beta.4"
anyhow = "1.0.100"
reqwest = { version = "0.12.28", features = ["json"] }
dotenvy = "0.15.7"
arc-swap = "1.8.0"
tonlib-core = "0.26.6"
num-bigint = "0.4.6"
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.9.2"
moka = { version = "0.12.12", features = ["sync"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
